--- a/saudacoes.html
+++ b/saudacoes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de exercicioo</title>
+    <title>Saudações</title>
     <link rel="stylesheet" href="estilo.css">
     
 </head>
@@ -24,6 +24,7 @@
     <footer>
         <p>&copy; Italo Bruno</p>
         <p>Contato italobfa@hotmail.com</p>
+        <a href="https://www.linkedin.com/in/italobruno-fa/">Meu Linkedin</a>
     </footer>
 
     <script src="saudacoes.js"></script>
